--- a/less/variables.less
+++ b/less/variables.less
@@ -1,21 +1,23 @@
+//
 // Variables
+//
 
 // Theme colors
-@color: #2280a6;
-@colorHover: #267a9c;
-@colorActive: #398daf;
-@positive: #8cc238;
-@positiveHover: #85b63a;
-@positiveActive: #98c84c;
-@negative: #c60606;
-@negativeHover: #b90d0d;
-@negativeActive: #cc1f1f;
-@subdued: #75777b;
-@subduedHover: #707276;
-@subduedActive: #838588;
-@significant: #00c6d6;
-@significantHover: #07b9c8;
-@significantActive: #1accda;
+@color: #0066cc;
+@colorHover: #0763bf;
+@colorActive: #1a76d1;
+@positive: #99cc33;
+@positiveHover: #91bf35;
+@positiveActive: #a3d148;
+@negative: #b00000;
+@negativeHover: #a50707;
+@negativeActive: #b81a1a;
+@subdued: #999;
+@subduedHover: #919191;
+@subduedActive: #a3a3a3;
+@significant: #ff9900;
+@significantHover: #ec9107;
+@significantActive: #ffa31a;
 
 // Common colors
 @neutral: #84959e;
@@ -29,20 +31,20 @@
 @grey6: #31313d;
 
 // Breakpoints
-@width-xs:    480px;
-@width-sm:    768px;
-@width-md:    992px;
-@width-lg:   1200px;
-@width-xl:   1400px;
+@widthXS: 480px;
+@widthSM: 768px;
+@widthMD: 992px;
+@widthLG: 1200px;
+@widthXL: 1400px;
 
 // Min and Max widths
-@width-min:    320px;
+@widthMin: 320px;
 
-@width-sm-max: @width-sm - 40px;
-@width-md-max: @width-md - 40px;
-@width-lg-max: @width-lg - 40px;
-@width-xl-max: @width-xl - 40px;
+@widthMaxSM: @widthSM - 40px;
+@widthMaxMD: @widthMD - 40px;
+@widthMaxLG: @widthLG - 40px;
+@widthMaxXL: @widthXL - 40px;
 
 // Grid variables
 @gutter: 1.6%;
-@column-gutter: @gutter / 2;
+@columnGutter: @gutter / 2;
