--- a/css/components/inputs.css
+++ b/css/components/inputs.css
@@ -17,9 +17,9 @@ label {
   font-family: "Arial", sans-serif;
   color: black;
   font-size: 15px;
-  line-height: auto;
-  padding: 7px 9px;
+  line-height: 1.42857;
   border: 1px solid #cfcece;
+  padding: 5px 9px;
   border-radius: 4px;
   box-sizing: border-box;
   white-space: nowrap;
@@ -35,7 +35,7 @@ label {
 .tef-input:hover,
 .tef-input:focus,
 .tef-input:active {
-  padding: 6px 8px;
+  padding: 4px 8px;
   border: 2px solid #ff9900;
   outline: none;
 }
@@ -109,44 +109,44 @@ label {
 .tef-negative .tef-message {
   background-color: #b00000;
 }
-.tef-row,
-.tef-group {
+.tef-form-row,
+.tef-form-group {
   display: block;
   position: relative;
   margin-bottom: 10px;
 }
-.tef-row label,
-.tef-group label {
+.tef-form-row label,
+.tef-form-group label {
   display: block;
 }
-.tef-row > * ~ input,
-.tef-group > * ~ input {
+.tef-form-row > * ~ input,
+.tef-form-group > * ~ input {
   margin-left: 6px;
 }
-.tef-row > label + *,
-.tef-group > label + *,
-.tef-row > .tef-message,
-.tef-group > .tef-message {
+.tef-form-row > label + *,
+.tef-form-group > label + *,
+.tef-form-row > .tef-message,
+.tef-form-group > .tef-message {
   margin-left: 0;
 }
-.tef-group > * {
+.tef-form-group > * {
   border-radius: 0 !important;
 }
-.tef-group > *:first-child,
-.tef-group > *:first-child > button {
+.tef-form-group > *:first-child,
+.tef-form-group > *:first-child > button {
   border-radius: 4px 0 0 4px !important;
 }
-.tef-group > *:last-child,
-.tef-group > *:last-child > button {
+.tef-form-group > *:last-child,
+.tef-form-group > *:last-child > button {
   border-radius: 0 4px 4px 0 !important;
 }
-.tef-group > *:first-child:last-child {
+.tef-form-group > *:first-child:last-child {
   border-radius: 4px !important;
 }
-.tef-group > * ~ * {
+.tef-form-group > * ~ * {
   margin: 0 0 0 -4px !important;
 }
-.tef-group .tef-button + .tef-button {
+.tef-form-group .tef-button + .tef-button {
   margin: 0 0 0 -3px !important;
 }
 [disabled],
