--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -26,19 +26,19 @@ button::-moz-focus-inner {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.tef-button::hover,
-.tef-button::focus {
+.tef-button:hover,
+.tef-button:focus {
   color: #fff;
   background-color: #0763bf;
   outline: none;
 }
-.tef-button::active,
+.tef-button:active,
 .tef-button.active {
   color: #fff;
   background-color: #1a76d1;
 }
-.tef-button [data-icon]::before,
-.tef-button ::content [data-icon]::before {
+.tef-button [data-icon]:before,
+.tef-button ::content [data-icon]:before {
   position: relative;
   font-size: 24px;
   line-height: 0;
@@ -58,8 +58,8 @@ button::-moz-focus-inner {
   font-size: 11px;
   padding: 8px;
 }
-.tef-button.small [data-icon]::before,
-.tef-button.small ::content [data-icon]::before {
+.tef-button.small [data-icon]:before,
+.tef-button.small ::content [data-icon]:before {
   font-size: 20px;
 }
 .tef-button.small span,
@@ -70,8 +70,8 @@ button::-moz-focus-inner {
   font-size: 24px;
   padding: 8px 15px;
 }
-.tef-button.large [data-icon]::before,
-.tef-button.large ::content [data-icon]::before {
+.tef-button.large [data-icon]:before,
+.tef-button.large ::content [data-icon]:before {
   font-size: 32px;
 }
 .tef-button.large span,
@@ -81,41 +81,41 @@ button::-moz-focus-inner {
 .tef-button.positive {
   background-color: #99cc33;
 }
-.tef-button.positive::hover,
-.tef-button.positive::focus {
+.tef-button.positive:hover,
+.tef-button.positive:focus {
   background-color: #91bf35;
 }
-.tef-button.positive::active {
+.tef-button.positive:active {
   background-color: #a3d148;
 }
 .tef-button.negative {
   background-color: #b00000;
 }
-.tef-button.negative::hover,
-.tef-button.negative::focus {
+.tef-button.negative:hover,
+.tef-button.negative:focus {
   background-color: #a50707;
 }
-.tef-button.negative::active {
+.tef-button.negative:active {
   background-color: #b81a1a;
 }
 .tef-button.subdued {
   background-color: #999999;
 }
-.tef-button.subdued::hover,
-.tef-button.subdued::focus {
+.tef-button.subdued:hover,
+.tef-button.subdued:focus {
   background-color: #919191;
 }
-.tef-button.subdued::active {
+.tef-button.subdued:active {
   background-color: #a3a3a3;
 }
 .tef-button.significant {
   background-color: #ff9900;
 }
-.tef-button.significant::hover,
-.tef-button.significant::focus {
+.tef-button.significant:hover,
+.tef-button.significant:focus {
   background-color: #ec9107;
 }
-.tef-button.significant::active {
+.tef-button.significant:active {
   background-color: #ffa31a;
 }
 .tef-button[disabled],
