--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -9,14 +9,14 @@ button::-moz-focus-inner {
   max-width: 200px;
   background-image: none;
   background-color: #0066cc;
-  color: white;
+  color: #ffffff;
   font-size: 15px;
   line-height: normal;
   font-weight: normal;
   text-align: center;
-  border: none;
+  border: 1px solid #0066cc;
   border-radius: 4px;
-  padding: 8px 9px;
+  padding: 7px 8px;
   cursor: pointer;
   user-select: none;
   text-decoration: none;
@@ -28,21 +28,23 @@ button::-moz-focus-inner {
 }
 .tef-button:hover,
 .tef-button:focus {
-  color: #fff;
-  background-color: #0763bf;
+  color: #ffffff;
+  background-color: #0059b3;
+  border-color: #0059b3;
   outline: none;
 }
 .tef-button:active,
 .tef-button.active {
-  color: #fff;
-  background-color: #1a76d1;
+  color: #ffffff;
+  background-color: #004c99;
+  border-color: #004c99;
 }
 .tef-button [data-icon]:before,
 .tef-button ::content [data-icon]:before {
   position: relative;
   font-size: 24px;
   line-height: 0;
-  top: 5px;
+  top: 3px;
 }
 .tef-button [data-icon] + span,
 .tef-button ::content [data-icon] + span,
@@ -56,7 +58,7 @@ button::-moz-focus-inner {
 }
 .tef-button.small {
   font-size: 11px;
-  padding: 8px;
+  padding: 7px;
 }
 .tef-button.small [data-icon]:before,
 .tef-button.small ::content [data-icon]:before {
@@ -68,7 +70,7 @@ button::-moz-focus-inner {
 }
 .tef-button.large {
   font-size: 24px;
-  padding: 8px 15px;
+  padding: 7px 14px;
 }
 .tef-button.large [data-icon]:before,
 .tef-button.large ::content [data-icon]:before {
@@ -78,45 +80,175 @@ button::-moz-focus-inner {
 .tef-button.large ::content span {
   font-size: 24px;
 }
-.tef-button.positive {
-  background-color: #99cc33;
+.tef-button .colors-loop.neutral {
+  background-color: #84959e;
+  color: #ffffff;
+  border-color: #84959e;
 }
-.tef-button.positive:hover,
-.tef-button.positive:focus {
-  background-color: #91bf35;
+.tef-button .colors-loop.neutral:hover,
+.tef-button .colors-loop.neutral:focus {
+  background-color: #768993;
+  color: #ffffff;
+  border-color: #768993;
 }
-.tef-button.positive:active {
-  background-color: #a3d148;
+.tef-button .colors-loop.neutral:active,
+.tef-button .colors-loop.neutral.active {
+  background-color: #697c86;
+  color: #ffffff;
+  border-color: #697c86;
 }
-.tef-button.negative {
-  background-color: #b00000;
+.tef-button .colors-loop.significant {
+  background-color: #ff9900;
+  color: #ffffff;
+  border-color: #ff9900;
 }
-.tef-button.negative:hover,
-.tef-button.negative:focus {
-  background-color: #a50707;
+.tef-button .colors-loop.significant:hover,
+.tef-button .colors-loop.significant:focus {
+  background-color: #e68a00;
+  color: #ffffff;
+  border-color: #e68a00;
 }
-.tef-button.negative:active {
-  background-color: #b81a1a;
+.tef-button .colors-loop.significant:active,
+.tef-button .colors-loop.significant.active {
+  background-color: #cc7a00;
+  color: #ffffff;
+  border-color: #cc7a00;
 }
-.tef-button.subdued {
+.tef-button .colors-loop.subdued {
   background-color: #999999;
+  color: #ffffff;
+  border-color: #999999;
 }
-.tef-button.subdued:hover,
-.tef-button.subdued:focus {
-  background-color: #919191;
+.tef-button .colors-loop.subdued:hover,
+.tef-button .colors-loop.subdued:focus {
+  background-color: #8c8c8c;
+  color: #ffffff;
+  border-color: #8c8c8c;
 }
-.tef-button.subdued:active {
-  background-color: #a3a3a3;
+.tef-button .colors-loop.subdued:active,
+.tef-button .colors-loop.subdued.active {
+  background-color: #808080;
+  color: #ffffff;
+  border-color: #808080;
+}
+.tef-button .colors-loop.negative {
+  background-color: #b00000;
+  color: #ffffff;
+  border-color: #b00000;
+}
+.tef-button .colors-loop.negative:hover,
+.tef-button .colors-loop.negative:focus {
+  background-color: #970000;
+  color: #ffffff;
+  border-color: #970000;
+}
+.tef-button .colors-loop.negative:active,
+.tef-button .colors-loop.negative.active {
+  background-color: #7d0000;
+  color: #ffffff;
+  border-color: #7d0000;
+}
+.tef-button .colors-loop.positive {
+  background-color: #99cc33;
+  color: #ffffff;
+  border-color: #99cc33;
+}
+.tef-button .colors-loop.positive:hover,
+.tef-button .colors-loop.positive:focus {
+  background-color: #8ab82e;
+  color: #ffffff;
+  border-color: #8ab82e;
+}
+.tef-button .colors-loop.positive:active,
+.tef-button .colors-loop.positive.active {
+  background-color: #7aa329;
+  color: #ffffff;
+  border-color: #7aa329;
+}
+.tef-button.neutral {
+  background-color: #84959e;
+  color: #ffffff;
+  border-color: #84959e;
+}
+.tef-button.neutral:hover,
+.tef-button.neutral:focus {
+  background-color: #768993;
+  color: #ffffff;
+  border-color: #768993;
+}
+.tef-button.neutral:active,
+.tef-button.neutral.active {
+  background-color: #697c86;
+  color: #ffffff;
+  border-color: #697c86;
 }
 .tef-button.significant {
   background-color: #ff9900;
+  color: #ffffff;
+  border-color: #ff9900;
 }
 .tef-button.significant:hover,
 .tef-button.significant:focus {
-  background-color: #ec9107;
+  background-color: #e68a00;
+  color: #ffffff;
+  border-color: #e68a00;
 }
-.tef-button.significant:active {
-  background-color: #ffa31a;
+.tef-button.significant:active,
+.tef-button.significant.active {
+  background-color: #cc7a00;
+  color: #ffffff;
+  border-color: #cc7a00;
+}
+.tef-button.subdued {
+  background-color: #999999;
+  color: #ffffff;
+  border-color: #999999;
+}
+.tef-button.subdued:hover,
+.tef-button.subdued:focus {
+  background-color: #8c8c8c;
+  color: #ffffff;
+  border-color: #8c8c8c;
+}
+.tef-button.subdued:active,
+.tef-button.subdued.active {
+  background-color: #808080;
+  color: #ffffff;
+  border-color: #808080;
+}
+.tef-button.negative {
+  background-color: #b00000;
+  color: #ffffff;
+  border-color: #b00000;
+}
+.tef-button.negative:hover,
+.tef-button.negative:focus {
+  background-color: #970000;
+  color: #ffffff;
+  border-color: #970000;
+}
+.tef-button.negative:active,
+.tef-button.negative.active {
+  background-color: #7d0000;
+  color: #ffffff;
+  border-color: #7d0000;
+}
+.tef-button.positive {
+  background-color: #99cc33;
+  color: #ffffff;
+  border-color: #99cc33;
+}
+.tef-button.positive:hover,
+.tef-button.positive:focus {
+  background-color: #8ab82e;
+  color: #ffffff;
+  border-color: #8ab82e;
+}
+.tef-button.positive:active,
+.tef-button.positive.active {
+  background-color: #7aa329;
+  color: #ffffff;
+  border-color: #7aa329;
 }
 .tef-button[disabled],
 .tef-button.disabled {
