--- a/css/components/inputs.css
+++ b/css/components/inputs.css
@@ -8,14 +8,11 @@ label {
   padding-right: 7px;
 }
 .tef-input {
-  width: 100%;
-  max-width: 330px;
   display: inline-block;
   vertical-align: middle;
   background: white;
   color: black;
   font-size: 15px;
-  line-height: auto;
   padding: 7px 9px;
   border: 1px solid #cfcece;
   border-radius: 4px;
@@ -37,75 +34,80 @@ label {
   border: 2px solid #ff9900;
   outline: none;
 }
-.tef-input-icon {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  width: 100%;
-  max-width: 330px;
-}
-.tef-input-icon .tef-input {
+.tef-input.icon {
   padding-right: 40px;
 }
-.tef-input-icon .tef-input:hover,
-.tef-input-icon .tef-input:focus,
-.tef-input-icon .tef-input:active {
+.tef-input.icon:hover,
+.tef-input.icon:focus,
+.tef-input.icon:active {
   padding-right: 39px;
 }
-.tef-input-icon .tef-input + [data-icon] {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  height: 24px;
-  margin-top: -12px;
+.tef-input.icon + [data-icon] {
+  position: relative;
+  top: 3px;
+  left: -37px;
+  width: 40px;
 }
-.tef-input-icon .tef-input + [data-icon]:before {
+.tef-input.icon + [data-icon]:before {
   font-size: 24px;
 }
-.tef-input-icon .tef-input.small {
-  padding-right: 35px;
+.tef-input.icon.small + [data-icon] {
+  top: 2px;
+  left: -32px;
 }
-.tef-input-icon .tef-input.small + [data-icon] {
-  height: 18px;
-  margin-top: -9px;
-}
-.tef-input-icon .tef-input.small + [data-icon]:before {
+.tef-input.icon.small + [data-icon]:before {
   font-size: 18px;
 }
-.tef-input-icon .tef-input.large {
-  padding-right: 45px;
+.tef-input.icon.large + [data-icon] {
+  top: 6px;
+  left: -40px;
 }
-.tef-input-icon .tef-input.large + [data-icon] {
-  height: 30px;
-  margin-top: -15px;
-}
-.tef-input-icon .tef-input.large + [data-icon]:before {
+.tef-input.icon.large + [data-icon]:before {
   font-size: 30px;
 }
+.tef-input.block {
+  width: 100%;
+}
+.tef-input.block + [data-icon],
+.tef-input.block.small + [data-icon],
+.tef-input.block.large + [data-icon] {
+  position: absolute;
+  right: 0;
+  left: auto;
+}
 .tef-message {
-  display: block;
-  max-width: 330px;
+  display: inline-block;
+  vertical-align: middle;
   color: white;
-  padding: 10px;
-  margin-top: 5px;
+  padding: 8px 10px;
   border-radius: 4px;
   box-sizing: border-box;
 }
-.tef-positive input {
-  padding: 4px 8px;
+.tef-ok input {
+  padding: 6px 8px;
   border: 2px solid #99cc33;
 }
-.tef-positive .tef-message {
+.tef-ok .tef-message {
   background-color: #99cc33;
 }
 .tef-warning input,
 .tef-negative input {
-  padding: 4px 8px;
+  padding: 6px 8px;
   border: 2px solid #b00000;
 }
 .tef-warning .tef-message,
 .tef-negative .tef-message {
   background-color: #b00000;
+}
+.tef-input.small + .tef-message {
+  font-size: 11px;
+}
+.tef-input.large + .tef-message {
+  font-size: 24px;
+}
+.tef-input.block + .tef-message {
+  margin-top: 5px;
+  display: block;
 }
 .tef-row,
 .tef-group {
