--- a/templates/variables.css
+++ b/templates/variables.css
@@ -11,7 +11,7 @@ CoreStyle.g.colorHover =
   "#0059b3";
 
 CoreStyle.g.textHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.borderHover =
   "#0059b3";
@@ -20,7 +20,7 @@ CoreStyle.g.colorActive =
   "#004c99";
 
 CoreStyle.g.textActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.borderActive =
   "#004c99";
@@ -29,7 +29,7 @@ CoreStyle.g.positive =
   "#99cc33";
 
 CoreStyle.g.positiveText =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.positiveBorder =
   "#99cc33";
@@ -38,7 +38,7 @@ CoreStyle.g.positiveHover =
   "#8ab82e";
 
 CoreStyle.g.positiveTextHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.positiveBorderHover =
   "#8ab82e";
@@ -47,7 +47,7 @@ CoreStyle.g.positiveActive =
   "#7aa329";
 
 CoreStyle.g.positiveTextActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.positiveBorderActive =
   "#7aa329";
@@ -56,7 +56,7 @@ CoreStyle.g.negative =
   "#b00000";
 
 CoreStyle.g.negativeText =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.negativeBorder =
   "#b00000";
@@ -65,7 +65,7 @@ CoreStyle.g.negativeHover =
   "#970000";
 
 CoreStyle.g.negativeTextHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.negativeBorderHover =
   "#970000";
@@ -74,7 +74,7 @@ CoreStyle.g.negativeActive =
   "#7d0000";
 
 CoreStyle.g.negativeTextActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.negativeBorderActive =
   "#7d0000";
@@ -83,7 +83,7 @@ CoreStyle.g.subdued =
   "#999";
 
 CoreStyle.g.subduedText =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.subduedBorder =
   "#999999";
@@ -92,7 +92,7 @@ CoreStyle.g.subduedHover =
   "#8c8c8c";
 
 CoreStyle.g.subduedTextHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.subduedBorderHover =
   "#8c8c8c";
@@ -101,7 +101,7 @@ CoreStyle.g.subduedActive =
   "#808080";
 
 CoreStyle.g.subduedTextActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.subduedBorderActive =
   "#808080";
@@ -110,7 +110,7 @@ CoreStyle.g.significant =
   "#ff9900";
 
 CoreStyle.g.significantText =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.significantBorder =
   "#ff9900";
@@ -119,7 +119,7 @@ CoreStyle.g.significantHover =
   "#e68a00";
 
 CoreStyle.g.significantTextHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.significantBorderHover =
   "#e68a00";
@@ -128,7 +128,7 @@ CoreStyle.g.significantActive =
   "#cc7a00";
 
 CoreStyle.g.significantTextActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.significantBorderActive =
   "#cc7a00";
@@ -137,7 +137,7 @@ CoreStyle.g.neutral =
   "#84959e";
 
 CoreStyle.g.neutralText =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.neutralBorder =
   "#84959e";
@@ -146,7 +146,7 @@ CoreStyle.g.neutralHover =
   "#768993";
 
 CoreStyle.g.neutralTextHover =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.neutralBorderHover =
   "#768993";
@@ -155,7 +155,7 @@ CoreStyle.g.neutralActive =
   "#697c86";
 
 CoreStyle.g.neutralTextActive =
-  "#ffffff";
+  "white";
 
 CoreStyle.g.neutralBorderActive =
   "#697c86";
