--- a/css/components.vivo.css
+++ b/css/components.vivo.css
@@ -85,6 +85,11 @@
 * {
   font-family: "Arial", sans-serif;
 }
+[disabled],
+.disabled {
+  opacity: 0.4;
+  pointer-events: none;
+}
 body {
   margin: 0;
   min-width: 320px;
@@ -119,6 +124,22 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+[data-columns]:before,
+[data-columns]:after {
+  content: " ";
+  display: table;
+}
+[data-columns]:after {
+  clear: both;
+}
+[data-columns]:before,
+[data-columns]:after {
+  content: " ";
+  display: table;
+}
+[data-columns]:after {
+  clear: both;
 }
 [data-columns]:before,
 [data-columns]:after {
@@ -1355,6 +1376,22 @@ button::-moz-focus-inner {
 .tef-button-group:after {
   clear: both;
 }
+.tef-button-group:before,
+.tef-button-group:after {
+  content: " ";
+  display: table;
+}
+.tef-button-group:after {
+  clear: both;
+}
+.tef-button-group:before,
+.tef-button-group:after {
+  content: " ";
+  display: table;
+}
+.tef-button-group:after {
+  clear: both;
+}
 .tef-button-group > * {
   float: left;
   margin-left: 1px;
@@ -1670,4 +1707,94 @@ label {
   .tef-dropdown select:active {
     padding: 5px 39px 5px 8px;
   }
+}
+label.tef-radio {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  float: none;
+  background: none;
+  min-width: 0;
+  border: none;
+  margin: 0;
+  padding: 10px 0;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+label.tef-radio.right {
+  text-align: right;
+  margin-right: 20px;
+}
+label.tef-radio.right span {
+  padding: 0 35px 0 0;
+  text-align: left;
+}
+label.tef-radio.right span:before {
+  left: auto;
+  right: 6px;
+}
+label.tef-radio.right span:after {
+  left: auto;
+  right: 0;
+}
+label.tef-radio.block {
+  display: block;
+}
+label.tef-radio.block.right {
+  text-align: left;
+  margin-right: 0;
+}
+label.tef-radio.block.right span:after {
+  right: 0;
+  left: auto;
+}
+label.tef-radio input {
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+}
+label.tef-radio input:checked ~ span {
+  color: #ff9900;
+}
+label.tef-radio input:checked ~ span:before {
+  display: block;
+}
+label.tef-radio span {
+  position: relative;
+  display: block;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: normal;
+  pointer-events: none;
+  padding: 0 20px 0 35px;
+  color: #686868;
+}
+label.tef-radio span:before {
+  display: none;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 6px;
+  width: 12px;
+  height: 12px;
+  margin-top: -7px;
+  background: #ff9900;
+  border-radius: 50%;
+}
+label.tef-radio span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  height: 22px;
+  width: 22px;
+  font-size: 22px;
+  margin-top: -13px;
+  border: 1px solid #cfcece;
+  border-radius: 50%;
 }
