styles for dropdowns and modals

--- a/less/theme.less
+++ b/less/theme.less
@@ -2,15 +2,10 @@
 // Theme vivo
 //
 
+@import "../../utils/less/reset.less";
+
 // Global styles
 * { font-family: "Arial", sans-serif; }
-
-// disabled
-[disabled],
-.disabled {
-  opacity: 0.4;
-  pointer-events: none;
-}
 
 // Components
 @import '../../grid/less/grid.less';
@@ -20,6 +15,8 @@
 @import '../../dropdowns/less/dropdowns.less';
 @import '../../radios/less/radios.less';
 @import '../../checkboxes/less/checkboxes.less';
+@import '../../modals/less/modals.less';
+@import '../../headers/less/headers.less';
 
 // Variables
 @import 'variables.less';
