--- a/less/theme.less
+++ b/less/theme.less
@@ -20,3 +20,20 @@
 
 // Variables
 @import 'variables.less';
+
+// Overrides
+.tef-header {
+  border-bottom: 1px solid #e8e8e8;
+  background: white;
+
+  h2 {
+    width: 120px;
+    height: 46px;
+    bottom: 26px;
+    left: 41px;
+  }
+
+  h1 a {
+    color: #999;
+  }
+}
