--- a/less/variables.less
+++ b/less/variables.less
@@ -75,9 +75,10 @@
     @grey6: #31313d;
 
 // Header
-    @headerNav: #003245;
+    @headerNav: #660099;
     @headerText: white;
-    @headerIcon: #b6c6cb;
+    @headerIcon: #a175c4;
+    @headerReverse: @headerNav;
 
 // Other properties
     @shadow: 0 2px 6px rgba(0,0,0,0.3);
@@ -86,8 +87,7 @@
     @widthXS: 480px;
     @widthSM: 768px;
     @widthMD: 992px;
-    @widthLG: 1200px;
-    @widthXL: 1400px;
+    @widthLG: 1207px;
 
 // Min and Max widths
     @widthMin: 320px;
@@ -95,7 +95,6 @@
     @widthMaxSM: @widthSM - 40px;
     @widthMaxMD: @widthMD - 40px;
     @widthMaxLG: @widthLG - 40px;
-    @widthMaxXL: @widthXL - 40px;
 
 // Grid variables
     @gutter: 1.6%;
