--- a/templates/variables.css
+++ b/templates/variables.css
@@ -179,13 +179,16 @@ CoreStyle.g.grey6 =
   "#31313d";
 
 CoreStyle.g.headerNav =
-  "#003245";
+  "#660099";
 
 CoreStyle.g.headerText =
   "white";
 
 CoreStyle.g.headerIcon =
-  "#b6c6cb";
+  "#a175c4";
+
+CoreStyle.g.headerReverse =
+  "#660099";
 
 CoreStyle.g.shadow =
   "0 2px 6px rgba(0, 0, 0, 0.3)";
@@ -200,10 +203,7 @@ CoreStyle.g.widthMD =
   "992px";
 
 CoreStyle.g.widthLG =
-  "1200px";
-
-CoreStyle.g.widthXL =
-  "1400px";
+  "1207px";
 
 CoreStyle.g.widthMin =
   "320px";
@@ -215,10 +215,7 @@ CoreStyle.g.widthMaxMD =
   "952px";
 
 CoreStyle.g.widthMaxLG =
-  "1160px";
-
-CoreStyle.g.widthMaxXL =
-  "1360px";
+  "1167px";
 
 CoreStyle.g.gutter =
   "1.6%";
