--- a/templates/variables.less
+++ b/templates/variables.less
@@ -75,9 +75,10 @@
 .CoreStyle-grey6 { fake-property: #31313d; }
 
 // Header
-.CoreStyle-headerNav { fake-property: #003245; }
+.CoreStyle-headerNav { fake-property: #660099; }
 .CoreStyle-headerText { fake-property: white; }
-.CoreStyle-headerIcon { fake-property: #b6c6cb; }
+.CoreStyle-headerIcon { fake-property: #a175c4; }
+.CoreStyle-headerReverse { fake-property: @headerNav; }
 
 // Other properties
 .CoreStyle-shadow { fake-property: 0 2px 6px rgba(0,0,0,0.3); }
@@ -86,8 +87,7 @@
 .CoreStyle-widthXS { fake-property: 480px; }
 .CoreStyle-widthSM { fake-property: 768px; }
 .CoreStyle-widthMD { fake-property: 992px; }
-.CoreStyle-widthLG { fake-property: 1200px; }
-.CoreStyle-widthXL { fake-property: 1400px; }
+.CoreStyle-widthLG { fake-property: 1207px; }
 
 // Min and Max widths
 .CoreStyle-widthMin { fake-property: 320px; }
@@ -95,7 +95,6 @@
 .CoreStyle-widthMaxSM { fake-property: @widthSM - 40px; }
 .CoreStyle-widthMaxMD { fake-property: @widthMD - 40px; }
 .CoreStyle-widthMaxLG { fake-property: @widthLG - 40px; }
-.CoreStyle-widthMaxXL { fake-property: @widthXL - 40px; }
 
 // Grid variables
 .CoreStyle-gutter { fake-property: 1.6%; }
