--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -251,3 +251,10 @@ button::-moz-focus-inner {
   color: white;
   border-color: #7aa329;
 }
+.tef-button.block {
+  display: block;
+  width: 100%;
+}
+.tef-button + .tef-button {
+  margin-left: 6px;
+}
