--- a/css/components.vivo.css
+++ b/css/components.vivo.css
@@ -1917,10 +1917,6 @@ label {
   color: black;
   text-decoration: none;
 }
-.tef-dropdown span:active + ul,
-.tef-dropdown span.active + ul {
-  display: block;
-}
 .tef-dropdown.small:before {
   font-size: 18px;
   line-height: 28px;
@@ -1939,12 +1935,27 @@ label {
 .tef-dropdown.large li {
   font-size: 24px;
 }
+.tef-dropdown.active ul {
+  display: block;
+}
 .tef-dropdown.block {
   width: 100%;
 }
 .tef-dropdown.block select,
 .tef-dropdown.block span {
   width: 100%;
+}
+.tef-dropdown[data-icon] {
+  text-align: left;
+}
+.tef-dropdown.up:before {
+  top: -2px;
+}
+.tef-dropdown.up ul {
+  box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.3);
+  top: auto;
+  bottom: 100%;
+  margin: 8px 4px 0;
 }
 @-moz-document url-prefix() {
   .tef-dropdown select {
@@ -2428,6 +2439,44 @@ label.tef-switch.right input:checked ~ span:before {
   .tef-header .tef-menu {
     display: none;
   }
+}
+.tef-sidebar {
+  color: #333;
+}
+.tef-sidebar header {
+  font-size: 10px;
+  line-height: 12px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 4px 15px;
+  background-color: #c5ced3;
+}
+.tef-sidebar > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.tef-sidebar > ul li {
+  background-color: #d1d9dd;
+  border-bottom: 1px solid #e5eaec;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 12px 15px;
+  box-sizing: border-box;
+}
+.tef-sidebar > ul a {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  margin: -12px -15px;
+  padding: 12px 15px;
+}
+.tef-sidebar > ul a:hover,
+.tef-sidebar > ul a:focus,
+.tef-sidebar > ul a:active,
+.tef-sidebar > ul a.active {
+  color: #fff;
+  background-color: #9ea5a9;
 }
 .tef-header {
   border-bottom: 1px solid #e8e8e8;
